Fix line spacing on mobile for page footer; fix location of website icon on cover images
* Enlarge line height in page footer when shown on phones and tablets
* Document why supports query for using max(env()) is written as it is
* Fix bug in positioning of home link for pages with cover image


Former-commit-id: 6d38cf8922adefb4de7ada8856b1a21937a566be

--- a/content/assets/form.css
+++ b/content/assets/form.css
@@ -1113,11 +1113,13 @@ main ul > li {
 
 .in-here, .out-there {
   width: 50%;
+  line-height: calc(var(--r-major) * var(--r-major));
 }
 
 @media (pointer: fine) {
   .in-here, .out-there {
     font-size: var(--t05);
+    line-height: var(--r-major);
   }
 }
 
@@ -1212,6 +1214,11 @@ main {
   justify-content: left;
 }
 
+/*
+ * When using a supports query for the actual padding, Chrome 76 and Firefox 68
+ * did apply the padding despite not yet supporting the max() function. With
+ * this two-clause query, they do not apply the padding—as they should.
+ */
 @supports (padding: max(1em)) and (padding: env(safe-area-inset-left)) {
   .page-header.barred > div {
     padding:
@@ -1253,7 +1260,7 @@ main {
 
 @supports (left: max(1em)) and (left: env(safe-area-inset-left)) {
   .page-header.cornered {
-    left: max(env(safe-area-inset-left), var(--min-margin));
+    left: max(env(safe-area-inset-left), 2vmin);
   }
 }
 
